// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button (unit tests) when the component loads with checked prop should match the snapshot 1`] = `
<kv-radio-button checked="" label="Option 1" value="opt1">
  <mock:shadow-root>
    <a class="radio-button radio-button--checked" part="radio-button">
      <div class="radio-button-label" part="radio-label">
        Option 1
      </div>
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with disabled prop should match the snapshot 1`] = `
<kv-radio-button disabled="" label="Option 1" value="opt1">
  <mock:shadow-root>
    <a class="radio-button radio-button--disabled" part="radio-button">
      <div class="radio-button-label" part="radio-label">
        Option 1
      </div>
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with icon should match the snapshot 1`] = `
<kv-radio-button icon="kv-add" value="opt1">
  <mock:shadow-root>
    <a class="radio-button radio-button--only-icon" part="radio-button">
      <div class="radio-button-icon" part="radio-icon">
        <kv-icon name="kv-add"></kv-icon>
      </div>
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with label and icon should match the snapshot 1`] = `
<kv-radio-button icon="kv-add" label="Add item" value="opt1">
  <mock:shadow-root>
    <a class="radio-button" part="radio-button">
      <div class="radio-button-icon" part="radio-icon">
        <kv-icon name="kv-add"></kv-icon>
      </div>
      <div class="radio-button-label" part="radio-label">
        Add item
      </div>
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with label should match the snapshot 1`] = `
<kv-radio-button label="Option 1" value="opt1">
  <mock:shadow-root>
    <a class="radio-button" part="radio-button">
      <div class="radio-button-label" part="radio-label">
        Option 1
      </div>
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;

exports[`Radio Button (unit tests) when the component loads with preventDefault prop should match the snapshot 1`] = `
<kv-radio-button label="Option 1" prevent-default="" value="opt1">
  <mock:shadow-root>
    <a class="radio-button" part="radio-button">
      <div class="radio-button-label" part="radio-label">
        Option 1
      </div>
    </a>
  </mock:shadow-root>
</kv-radio-button>
`;
